got login to work and created user database

--- a/templates/base.html
+++ b/templates/base.html
@@ -53,3 +53,15 @@
         </div>
     </nav>
     <div class="container">
+        {% for category, message in get_flashed_messages(with_categories=True) %}
+        <div class="alert alert-{{ category }}">{{ message }}</div>
+        {% endfor %}
+
+        {% block content %}
+        {% endblock %}
+
+    </div>
+    <script src="/static/app.js" defer></script>
+</body>
+
+</html>
