--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
     <link rel="shortcut icon" href="/static/favicon.ico">
 </head>
 
-<body class="{% block body_class %}{% endblock %}" onload="script('/static/app.js')">
+<body class="{% block body_class %}{% endblock %}">
     <nav class="navbar navbar-expand">
         <div class="container-fluid">
             <div class="navbar-header">
@@ -61,7 +61,6 @@
         {% endblock %}
 
     </div>
-    <script src="/static/app.js" defer></script>
 </body>
 
 </html>
