trying to get the favorites list to work, to no success

--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -16,8 +16,16 @@
                     <a href="/users/delete" class="btn btn-outline-danger">Delete Profile</a>
                     {%endif%}
                 </div>
+                <div>
+                    <ul>
+                        {%for book in bookshelf%}
+                        <li>
+                            {{book}}
+                        </li>
+                        {%endfor%}
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-</div>
-{% endblock %}
+    {% endblock %}
