--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {%block content%}
-<h1>WHAT AM I TO YOU, KARI?! NAME ME!!!</h1>
-<p>KARI CHANGE THIS!
+<h1>My Google Books API capstone</h1>
+<p>I finally was able to put this together! Will continue to work on it over time.
+    I hope it looks clean, and I will continue to improve this project further down the line.
+    Thank you! Enjoy!
 </p>
 {%endblock%}
